added XML to JSON

--- a/py/settings.json
+++ b/py/settings.json
@@ -1,7 +1,7 @@
 {
-    "CE_path": "C:/Users/david/OneDrive/_PhD/Research/tx_cx/Collation/Collation_Editor/CE",
-    "mss_path": "C:/Users/david/OneDrive/_PhD/Research/tx_cx/mss",
-    "OTE_path": "C:/Users/david/OneDrive/_PhD/Research/tx_cx/OTE",
+    "CE_path": "",
+    "mss_path": "",
+    "OTE_path": "",
     "efficiency_mode": false,
     "dpi_awareness": 1,
     "tab_on_start": "transcription"
