--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,25 @@
 [tool.briefcase]
 project_name = "Tendon"
 bundle = "com.davidaflood.tendon"
-version = "0.0.1"
+version = "0.2"
 url = "https://github.com/d-flood/Tendon"
 license = "MIT license"
-author = 'David Flood'
+author = "David Flood"
 author_email = "davidfloodii@gmail.com"
 
 [tool.briefcase.app.tendon]
 formal_name = "Tendon"
 description = "a suite of tools for integrating transcription and collation software"
 icon = "src/tendon/resources/tendon"
-sources = ['src/tendon']
-requires = []
+sources = ["src/tendon"]
+requires = [
+    "lxml",
+    "natsort",
+    "PySide2",
+    "PySimpleGUIQt",
+    "Markdown==3.2.2",
+    "markdown-del-ins"
+]
 
 
 [tool.briefcase.app.tendon.macOS]
