--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.briefcase]
 project_name = "Tendon"
 bundle = "com.davidaflood.tendon"
-version = "0.12.1"
+version = "0.13"
+min_needed_to_update = "0.13"
 url = "https://github.com/d-flood/Tendon"
 license = "MIT license"
 author = "David Flood"
@@ -18,7 +19,9 @@ requires = [
     "PySide2",
     "PySimpleGUIQt",
     "Markdown==3.2.2",
-    "markdown-del-ins"
+    "markdown-del-ins",
+    "PyGithub",
+    "toml"
 ]
 
 
