--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.briefcase]
 project_name = "Tendon"
 bundle = "com.davidaflood.tendon"
-version = "0.17.1"
+version = "0.18"
 min_needed_to_update = "0.15"
 url = "https://github.com/d-flood/Tendon"
 license = "MIT license"
@@ -21,7 +21,8 @@ requires = [
     "Markdown==3.2.2",
     "markdown-del-ins",
     "PyGithub",
-    "toml"
+    "toml",
+    "python-docx==0.8.11"
 ]
 
 
