--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
-[tool.briefcase]
 project_name = "Tendon"
 bundle = "com.davidaflood.tendon"
-version = "0.18"
-min_needed_to_update = "0.15"
+version = "0.19"
 url = "https://github.com/d-flood/Tendon"
 license = "MIT license"
 author = "David Flood"
 author_email = "davidfloodii@gmail.com"
 
-[tool.briefcase.app.tendon]
 formal_name = "Tendon"
 description = "a suite of tools for integrating transcription and collation software"
 icon = "src/tendon/resources/tendon"
@@ -16,29 +13,9 @@ sources = ["src/tendon"]
 requires = [
     "lxml",
     "natsort",
-    "PySide2",
-    "PySimpleGUIQt",
+    "PySimpleGUI",
     "Markdown==3.2.2",
     "markdown-del-ins",
-    "PyGithub",
     "toml",
     "python-docx==0.8.11"
 ]
-
-
-[tool.briefcase.app.tendon.macOS]
-requires = []
-
-[tool.briefcase.app.tendon.linux]
-requires = []
-system_requires = []
-
-[tool.briefcase.app.tendon.windows]
-requires = []
-
-# Mobile deployments
-[tool.briefcase.app.tendon.iOS]
-requires = []
-
-[tool.briefcase.app.tendon.android]
-requires = []
