include docx files in wheel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ source = "https://github.com/d-flood/criticus"
 [tool.hatch.version]
 path = "criticus/__about__.py"
 
+[tool.hatch.metadata.package-data]
+criticus = ["py/export_to_docx/*.docx"]
+
 [tool.hatch.envs.default]
 python = "3.11"
 dependencies = [
@@ -62,9 +65,6 @@ dependencies = []
 detached = true
 
 [tool.hatch.build.targets.sdist]
-include = [
-    "criticus/py/export_to_docx/template.docx"
-]
 exclude = [
   "/.github",
   "/docs",
